# Documentation-Hub

./: .gitignore  README.md  pyproject.toml
stuff/: docToText.py  ingest.py  setup.py  vectorize.py
