[project]
name = "documentation-hub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "filetype>=1.2.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
]
